buildscript {
	ext {
		springBootVersion = '2.6.2'
		set('springCloudVersion', "2021.0.0")
	}
	repositories {
		mavenCentral()
	}
	dependencies {
		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
	}
}

plugins {
	id "org.sonarqube" version "3.3"
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'org.springframework.boot' version '2.6.2'
}

apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'org.springframework.boot'
apply plugin: 'jacoco'

//added to accept systemproperties while executing gradlew test cmd
test {
	systemProperties = System.properties
}

jar {
	archivesBaseName = 'phase4-scsb-core'
	archiveVersion = '0.0.1-SNAPSHOT'
}
sourceCompatibility = 1.17
targetCompatibility = 1.17

repositories {
	mavenCentral()
}


dependencies {
	implementation fileTree(dir: '/data/commonjar', include: '*2.1.jar')
	implementation 'org.projectlombok:lombok:1.18.22'
	annotationProcessor 'org.projectlombok:lombok:1.18.22'
	testImplementation 'org.projectlombok:lombok:1.18.22'
	testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'
	implementation('org.springframework.boot:spring-boot-starter-web-services')
	implementation('org.springframework.boot:spring-boot-starter-data-jpa')

	implementation('commons-beanutils:commons-beanutils:1.9.4')
	implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
	implementation('commons-io:commons-io:2.11.0')
	//implementation group: 'io.springfox', name: 'springfox-boot-starter', version: '3.0.0'
	implementation('io.springfox:springfox-swagger-ui:3.0.0')
	implementation('io.springfox:springfox-swagger2:3.0.0')
	implementation('org.codehaus.jettison:jettison:1.4.1')
	implementation('org.apache.camel.springboot:camel-spring-boot-starter:3.14.0')
	implementation('org.apache.camel.springboot:camel-aws-s3-starter:3.7.6')
	implementation('org.apache.camel:camel-aws-s3:3.7.6')
	implementation('org.apache.camel:camel-activemq:3.14.0')
	implementation('org.apache.camel:camel-core-engine:3.14.0')
	implementation('org.apache.camel:camel-core:3.14.0')
	implementation('org.apache.camel:camel-support:3.14.0')
	implementation('org.apache.camel:camel-bindy:3.14.0')
	implementation('org.apache.camel:camel-mail:3.14.0')
	implementation('org.apache.camel:camel-ftp:3.14.0')
	implementation('org.apache.camel:camel-jms:3.14.0')
	implementation('org.apache.camel:camel-zipfile:3.14.0')
	implementation('org.apache.activemq:activemq-camel:5.15.15')
	implementation('org.apache.activemq:activemq-pool:5.15.15')
	implementation('org.apache.activemq:activemq-broker:5.15.15')
	implementation('org.apache.activemq:activemq-client:5.15.15')
	implementation('info.freelibrary:freelib-marc4j:2.6.12')
	implementation('org.apache.poi:poi:5.1.0')
	implementation('org.apache.camel:camel-zip-deflater:3.14.0');
	implementation('org.apache.commons:commons-text:1.9');

	implementation('org.apache.poi:poi-ooxml:5.1.0')
	implementation 'io.micrometer:micrometer-registry-prometheus'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
	implementation 'net.logstash.logback:logstash-logback-encoder:7.0.1'

	implementation 'org.springframework.cloud:spring-cloud-starter-config'
	implementation 'org.springframework.cloud:spring-cloud-starter-bus-amqp'
	implementation group: 'org.json', name: 'json', version: '20211205'
	implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.9'

	//compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-parent', version: 'Hoxton.SR5', ext: 'pom'

	compileOnly('org.projectlombok:lombok:1.18.22')
	annotationProcessor 'org.projectlombok:lombok:1.18.22'

	testImplementation('org.springframework.boot:spring-boot-starter-test')
	testImplementation group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.9'
	testImplementation group: 'org.powermock', name: 'powermock-module-junit4', version: '2.0.9'

	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.26'
	implementation ("org.springframework.boot:spring-boot-starter-actuator")
}

configurations.all {
	resolutionStrategy.eachDependency { DependencyResolveDetails details ->
		if (details.requested.group == 'org.apache.logging.log4j') {
			details.useVersion '2.17.0'
		}
	}
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
	}
}

jacocoTestReport {
	dependsOn test // tests are required to run before generating the report
}

test {
	finalizedBy jacocoTestReport // report is always generated after tests run
}
jacocoTestReport {
	dependsOn test
	group = "Reporting"
	reports {
		xml.required = false
		csv.required = false
		html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
	}
}

jacoco {
	toolVersion = "0.8.7"
	reportsDirectory = layout.buildDirectory.dir('customJacocoReportDir')
}

task scsbCoreJavadocs(type: Javadoc) {
	source = sourceSets.main.java
	classpath = configurations.implementation
	options.addStringOption('Xdoclint:none', '-quiet')
	String home = System.getProperty("user.home");
	destinationDir = new File(home+"/scsb-javadocs/scsb-core");

}


/* bootJar {
	layered()
} */
jar {
	enabled = false
	archiveClassifier = '' //use empty string
}